kubernetes/base/06-drupal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apigee-portal-ingress
spec:
  backend:
    serviceName: apigee-portal-nodeport-service
    servicePort: 80
